--- a/redo-haskell.cabal
+++ b/redo-haskell.cabal
@@ -18,7 +18,7 @@ executable redo-haskell
   main-is:             Main.hs
   other-modules:       Build, Database, DatabaseEntry, FilePathUtil, JobServer, PrettyPrint, Types, UpToDate
   other-extensions:    StandaloneDeriving, ScopedTypeVariables, CPP
-  build-depends:       base, containers, directory, filepath, process, time, bytestring, unix, cryptohash, hex, ansi-terminal, random, filelock
+  build-depends:       base, containers, directory, filepath, process, time, bytestring, unix, cryptohash, hex, ansi-terminal, random, filelock, filesystem-trees
   hs-source-dirs:      src
   default-language:    Haskell2010
 
