--- a/stack.yaml
+++ b/stack.yaml
@@ -39,7 +39,9 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- cond-0.4.1.1
+- filesystem-trees-0.1.0.6
 
 # Override default flag values for local packages and extra-deps
 flags: {}
