--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
+name: build
 on:
   push:
     branches:
     - master
-on:
   workflow_dispatch:
 jobs:
   my_job:
-    name: build
+    name: compile 
     runs-on: ubuntu-latest
     run: ./do
