--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,30 @@
-name: build
+name: Compile and Test 
 on:
   push:
     branches:
     - master
   workflow_dispatch:
 jobs:
-  my_job:
-    name: compile 
+  compile_job:
+    name: compile_and_test
     runs-on: ubuntu-latest
     steps:
-      - run: ./do
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - uses: haskell/actions/setup@v2
+        with:
+          #ghc-version: '8.8.4' # Exact version of ghc to use
+          # cabal-version: 'latest'. Omitted, but defaults to 'latest'
+          enable-stack: true
+          stack-version: 'latest'
+      - run: ${{ github.workspace }}/do
+      - run: PATH=$PATH:${{ github.workspace }}/bin redo test/all
+      - run: echo "🍏 This job's status is ${{ job.status }}."
