--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-7.13
+resolver: lts-22.6
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,15 +39,23 @@ packages:
 - '.'
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps:
-- cond-0.4.1.1
-- filesystem-trees-0.1.0.6
+# extra-deps:
+#
+# extra-include-dirs:
+#   - /root/leveldb/include
+#
+# extra-lib-dirs:
+#   - /root/leveldb/build/
 
 # Override default flag values for local packages and extra-deps
 flags: {}
 
 # Extra package databases containing global packages
 extra-package-dbs: []
+
+#ghc-options:
+#  "$everything": -fPIC
+#  "$locals": -fPIC
 
 # Control whether we use the GHC we find on the path
 # system-ghc: true
