substituting leveldb in as database implementation

--- a/redo-haskell.cabal
+++ b/redo-haskell.cabal
@@ -18,10 +18,7 @@ executable redo-haskell
   main-is:             Main.hs
   other-modules:       Build, Database, DatabaseEntry, FilePathUtil, JobServer, PrettyPrint, Types, UpToDate
   other-extensions:    StandaloneDeriving, ScopedTypeVariables, CPP
-  build-depends:       base, containers, directory, filepath, process, time, bytestring, unix, cryptohash, hex, ansi-terminal, random, filelock
---  data-default, leveldb-haskell
---  extra-libraries: stdc++
---  ghc-options: -pgmlg++
+  build-depends:       base, containers, directory, filepath, process, time, bytestring, unix, cryptohash, hex, ansi-terminal, random, filelock,  data-default, leveldb-haskell
   hs-source-dirs:      src
   default-language:    Haskell2010
 
